# asusctl

./: .gitlab-ci.yml  ARMOURY_CRATE_HARDWARE_PROTOCOL_MAP.md  CHANGELOG.md  Cargo.toml  MANUAL.md  README.md
.github/workflows/: release.yml
asus-shutdown/src/: main.rs
asusctl/: Cargo.toml
asusctl/examples/: anime-led-scan.rs  anime-outline.rs  aura-zoned-breathe.rs
asusctl/src/: anime_cli.rs  fan_curve_cli.rs  main.rs
asusd/: Cargo.toml
asusd-user/: Cargo.toml
asusd-user/src/: daemon.rs
asusd/src/: asus_armoury.rs  aura_manager.rs  aura_types.rs  ctrl_backlight.rs  ctrl_gpu.rs  ctrl_platform.rs  ctrl_xgm_led.rs  daemon.rs  error.rs  lib.rs
config-traits/: Cargo.toml
config-traits/src/: lib.rs
distro-packaging/: PKGBUILD
dmi-id/src/: lib.rs
extra/: install-build-deps-ubuntu-jammy.sh  ubuntu-22.04-x11-oneliner.sh
patches/uhid-virt/: Cargo.toml
rog-anime/src/: diagonal.rs  error.rs  image.rs  sequencer.rs  usb.rs
rog-aura/: Cargo.toml  README.md
rog-aura/data/: aura_support.ron
rog-aura/src/: aura_capabilities.rs  aura_detection.rs  builtin_modes.rs  lib.rs
rog-control-center/: Cargo.toml
rog-control-center/data/: org.opengamingcollective.rog-control-center.metainfo.xml
rog-control-center/src/: cli_options.rs  config.rs  main.rs  notify.rs  tray.rs  zbus_proxies.rs
rog-control-center/ui/: main_window.slint
rog-dbus/src/: zbus_aura.rs  zbus_fan_curves.rs
rog-platform/: Cargo.toml
rog-platform/examples/: ally-gamepad-calibration.rs  ally-gamepad-mode-changes.rs  (+1 more)
rog-scsi/: Cargo.toml
rog-scsi/src/: scsi.rs
(+45 files in other folders)
