[package]
name = "rog_scsi"
version.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
edition.workspace = true

[features]
default = ["dbus", "toml"]
dbus = ["zbus"]

[dependencies]
sg.workspace = true
serde.workspace = true
zbus = { workspace = true, optional = true }

# cli and logging

toml = { workspace = true, optional = true }
thiserror.workspace = true
